Fixed css styling changes where popped up post would not have z-index priority

--- a/src/pages/home/mainfeed/Main.css
+++ b/src/pages/home/mainfeed/Main.css
@@ -68,6 +68,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background: white !important;
+  z-index: 5;
 }
 
 .postImage {
